--- a/zuul-simple-webapp/build.gradle
+++ b/zuul-simple-webapp/build.gradle
@@ -13,6 +13,8 @@ apply plugin: 'groovy'
 dependencies {
     compile project(":zuul-core")
 
+    compile group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.25'
+
     compile 'org.apache.httpcomponents:httpclient:4.5'
     providedCompile 'javax.servlet:servlet-api:2.5'
 
